--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <div class="header">
                 <h2>DLP output visualisation</h2>
                 <sep></sep>
-                <select name="select" id="select">
-                </select>
+                <select name="select" id="select"></select>
                 <sep></sep>
                 <div class="inline">
                     <span id="number-display-quote">Total Detections: </span>
